--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,8 +1,19 @@
 {
+    "dark": "Dark",
+    "system": "System",
+    "light": "Light",
+    "email": "Email",
+    "password": "Password",
+    "signIn": "Sign in",
     "footer": {
         "message": "Built by <authorLink>{author}</authorLink>. The source code is available on <repoLink>{repo}</repoLink>."
     },
-    "dark": "Dark",
-    "system": "System",
-    "light": "Light"
+    "login": {
+        "title": "Login",
+        "message": "Sign in with your account",
+        "divider": "Or continue with"
+    },
+    "validation": {
+        "required": "This field si required"
+    }
 }
