--- a/src/assets/locales/fr.json
+++ b/src/assets/locales/fr.json
@@ -1,19 +1,38 @@
 {
+    "ERR_FR_TOO_MANY_REDIRECTS": "Too many redirections",
+    "ERR_BAD_OPTION_VALUE": "Bad option value",
+    "ERR_DEPRECATED": "Deprecated",
+    "ECONNABORTED": "Connexion aborted",
+    "ERR_BAD_RESPONSE": "Bad response",
+    "ERR_BAD_REQUEST": "Bad request",
+    "ERR_BAD_OPTION": "Bad option",
+    "ERR_NOT_SUPPORT": "Not supported",
+    "ERR_INVALID_URL": "Invalid URL",
+    "ERR_NETWORK": "Network error",
+    "ETIMEDOUT": "Timed out",
+    "ERR_CANCELED": "Request canceled",
+    "ERR_UNKNOWN": "Unknown error",
+
     "dark": "Dark",
     "system": "System",
     "light": "Light",
     "email": "Email",
     "password": "Password",
     "signIn": "Sign in",
+    "error": "Error",
+    "info": "info",
+
     "footer": {
         "message": "Built by <authorLink>{author}</authorLink>. The source code is available on <repoLink>{repo}</repoLink>."
     },
     "login": {
         "title": "Login",
         "message": "Sign in with your account",
-        "divider": "Or continue with"
+        "divider": "Or continue with",
+        "authentication": "Authentication",
+        "welcome": "Welcome {firstName}"
     },
     "validation": {
-        "required": "This field si required"
+        "required": "This field is required"
     }
 }
